Modify the HTML file by adding classes that contain the names of the planets. modify the CSS file by including images of planets and placing them  to improve the user interface. Add a file with every image used in the project, and remove any that aren't needed. incorporated media quares to create a responsive design for the project.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <section>
         <ul>
-            <li data-text="Mercury"><a href="#">Mercury</a></li>
-            <li data-text="Venus"><a href="#"></a>Venus</li>
-            <li data-text="Earth"><a href="#"></a>Earth</li>
-            <li data-text="Mars"><a href="#"></a>Mars</li>
-            <li data-text="Jupiter"><a href="#"></a>Jupiter</li>
-            <li data-text="Saturn"><a href="#"></a>Saturn</li>
-            <li data-text="Uranus"><a href="#"></a>Uranus</li>
-            <li data-text="Neptune"><a href="#"></a>Neptune</li>
+            <li class="Mercury" data-text="Mercury"><a href="#"></a>Mercury</li>
+            <li class="Venus" data-text="Venus"><a href="#"></a>Venus</li>
+            <li class="Earth" data-text="Earth"><a href="#"></a>Earth</li>
+            <li class="Mars" data-text="Mars"><a href="#"></a>Mars</li>
+            <li class="Jupiter" data-text="Jupiter"><a href="#"></a>Jupiter</li>
+            <li class="Saturn" data-text="Saturn"><a href="#"></a>Saturn</li>
+            <li class="Uranus" data-text="Uranus"><a href="#"></a>Uranus</li>
+            <li class="Neptune" data-text="Neptune"><a href="#"></a>Neptune</li>
         </ul>
     </section>
 </body>
